correction position footer et main archive dans version mobile

--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -18,6 +18,7 @@
     overflow-x: hidden!important;
     @include no-desktop {
         flex-flow: row nowrap;
+        position: relative;
     }
 }
 
