--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,8 +1,8 @@
 .footer {
     padding-bottom: 3rem;
     @include no-desktop {
-        position: fixed;
-        bottom: 20px;
+        position: absolute;
+        bottom: 0;
         padding: 0;
         margin: 0;
         width: 100vw;
